WKWebView should expose navigator.mediaDevices when content is loaded from app bundle https://bugs.webkit.org/show_bug.cgi?id=220184 <rdar://problem/72792032>

Reviewed by Eric Carlson.

In case of non HTTP or HTTPS origins, getUserMedia was always denied.
This patch updates the code by allowing getUserMedia prompts for other protocols.
In that case, the user is presented the prompt with the application name since the origin domain does not mean anything.
Manually tested.

* UIProcess/Cocoa/MediaPermissionUtilities.mm:
(WebKit::alertMessageText):


Canonical link: https://commits.webkit.org/232825@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271229 268f45cc-cd09-0410-ab3c-d52691b4dbfc